--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <button class="nav-action-btn">
               <ion-icon name="bag-outline" aria-hidden="true"></ion-icon>
 
-              <data class="nav-action-text" value="318.00">Basket: <strong>$318.00</strong></data>
+              <data class="nav-action-text" value="3118.00">Basket: <strong>₵3118.00</strong></data>
 
               <data class="nav-action-badge" value="4" aria-hidden="true">4</data>
             </button>
@@ -322,7 +322,7 @@
                     <a href="#">Running Sneaker Shoes</a>
                   </h3>
 
-                  <data class="card-price" value="180.85">$180.85</data>
+                  <data class="card-price" value="1800.85">₵1800.85</data>
 
                 </div>
 
@@ -384,7 +384,7 @@
                     <a href="#">Leather Mens Slipper</a>
                   </h3>
 
-                  <data class="card-price" value="190.85">$190.85</data>
+                  <data class="card-price" value="1900.85">₵1900.85</data>
 
                 </div>
 
@@ -448,7 +448,7 @@
                     <a href="#">Simple Fabric Shoe</a>
                   </h3>
 
-                  <data class="card-price" value="160.85">$160.85</data>
+                  <data class="card-price" value="1600.85">₵1600.85</data>
 
                 </div>
 
@@ -512,7 +512,7 @@
                     <a href="#">Air Jordan 7 Retro </a>
                   </h3>
 
-                  <data class="card-price" value="170.85">$170.85 <del>$200.21</del></data>
+                  <data class="card-price" value="1700.85">₵1700.85 <del>₵2000.21</del></data>
 
                 </div>
 
@@ -576,7 +576,7 @@
                     <a href="#">Nike Air Max 270 SE</a>
                   </h3>
 
-                  <data class="card-price" value="120.85">$120.85</data>
+                  <data class="card-price" value="1200.85">₵1200.85</data>
 
                 </div>
 
@@ -638,7 +638,7 @@
                     <a href="#">Adidas Sneakers Shoes</a>
                   </h3>
 
-                  <data class="card-price" value="100.85">$100.85</data>
+                  <data class="card-price" value="800.85">₵800.85</data>
 
                 </div>
 
@@ -700,7 +700,7 @@
                     <a href="#">Nike Basketball shoes</a>
                   </h3>
 
-                  <data class="card-price" value="120.85">$120.85</data>
+                  <data class="card-price" value="1100.85">₵1200.85</data>
 
                 </div>
 
@@ -762,7 +762,7 @@
                     <a href="#">Simple Fabric Shoe</a>
                   </h3>
 
-                  <data class="card-price" value="100.85">$100.85</data>
+                  <data class="card-price" value="1000.85">₵1000.85</data>
 
                 </div>
 
@@ -908,7 +908,7 @@
                       <a href="#">Running Sneaker Shoes</a>
                     </h3>
 
-                    <data class="card-price" value="180.85">$180.85</data>
+                    <data class="card-price" value="1500.85">₵1500.85</data>
 
                   </div>
 
@@ -970,7 +970,7 @@
                       <a href="#">Leather Mens Slipper</a>
                     </h3>
 
-                    <data class="card-price" value="190.85">$190.85</data>
+                    <data class="card-price" value="1900.85">₵1900.85</data>
 
                   </div>
 
@@ -1034,7 +1034,7 @@
                       <a href="#">Simple Fabric Shoe</a>
                     </h3>
 
-                    <data class="card-price" value="160.85">$160.85</data>
+                    <data class="card-price" value="600.85">₵600.85</data>
 
                   </div>
 
@@ -1098,7 +1098,7 @@
                       <a href="#">Air Jordan 7 Retro </a>
                     </h3>
 
-                    <data class="card-price" value="170.85">$170.85 <del>$200.21</del></data>
+                    <data class="card-price" value="700.85">₵700.85 <del>₵1700.21</del></data>
 
                   </div>
 
@@ -1136,7 +1136,7 @@
                   <h3 class="h4 card-title">Free Shiping</h3>
 
                   <p class="card-text">
-                    All orders over <span>$150</span>
+                    All orders over <span>₵1000</span>
                   </p>
                 </div>
 
@@ -1355,7 +1355,7 @@
                 <ion-icon name="location"></ion-icon>
 
                 <span class="footer-link-text">
-                  2751 S Parker Rd, Aurora, CO 80014, United States
+                  2751 S Koo Wulu Str, Dansoman
                 </span>
               </address>
             </li>
@@ -1364,7 +1364,7 @@
               <a href="tel:+557343673257" class="footer-link">
                 <ion-icon name="call"></ion-icon>
 
-                <span class="footer-link-text">+557343673257</span>
+                <span class="footer-link-text">+233592703149</span>
               </a>
             </li>
 
@@ -1372,7 +1372,7 @@
               <a href="mailto:footcap@help.com" class="footer-link">
                 <ion-icon name="mail"></ion-icon>
 
-                <span class="footer-link-text">footcap@help.com</span>
+                <span class="footer-link-text">emmanuelbox21@gmail.com</span>
               </a>
             </li>
 
@@ -1493,7 +1493,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 <a href="#" class="copyright-link">codewithsadee</a>. All Rights Reserved
+          &copy; 2022 <a href="#" class="copyright-link">YoungR</a>. All Rights Reserved
         </p>
 
       </div>
